force-app/main/default/objects/ssot__OutreachSummary__dlm/fields/ssot__GiftCount__c.field-meta.xml
<CustomField>
    <fullName>ssot__GiftCount__c</fullName>
    <label>Gift Count</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>GiftCount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>