force-app/main/default/objects/ssot__OutreachSummary__dlm/fields/ssot__rel_1697761240705_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1697761240705_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>OutreachSummary_OutreachSourceCodeId_rel</label>
    <referenceTo>ssot__OutreachSourceCode__dlm</referenceTo>
    <relationshipLabel>OutreachSummary_OutreachSourceCodeId_rel</relationshipLabel>
    <relationshipName>rel_1697761240705_end</relationshipName>
    <type>Lookup</type>
</CustomField>