force-app/main/default/objects/ssot__OutreachSummary__dlm/fields/ssot__ResponseRate__c.field-meta.xml
<CustomField>
    <fullName>ssot__ResponseRate__c</fullName>
    <label>Response Rate</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ResponseRate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>