force-app/main/default/objects/ssot__OutreachSummary__dlm/fields/ssot__TotalGiftTransactionAmount__c.field-meta.xml
<CustomField>
    <fullName>ssot__TotalGiftTransactionAmount__c</fullName>
    <label>Total Gift Transaction Amount</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>TotalGiftTransactionAmount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>