force-app/main/default/objects/ssot__OutreachSummary__dlm/fields/ssot__TotalOnetimeGiftAmount__c.field-meta.xml
<CustomField>
    <fullName>ssot__TotalOnetimeGiftAmount__c</fullName>
    <label>Total Onetime Gift Amount</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>TotalOnetimeGiftAmount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>