force-app/main/default/objects/ssot__OutreachSummary__dlm/fields/ssot__TotalRecurringGiftAmount__c.field-meta.xml
<CustomField>
    <fullName>ssot__TotalRecurringGiftAmount__c</fullName>
    <label>Total Recurring Gift Amount</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>TotalRecurringGiftAmount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>